add page layout

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
     <main>
+      <!-- 1-st page -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
@@ -90,8 +91,8 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li
-            ><img
+          <li>
+            <img
               src="./images/img-3.jpg"
               alt="Camila Garcia"
               width="264"
@@ -100,8 +101,8 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li
-            ><img
+          <li>
+            <img
               src="./images/img-4.jpg"
               alt="Daniel Wilson"
               width="264"
