--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <nav>
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a href="studio">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="portfolio">Portfolio</a>
           </li>
           <li>
             <a href="">Contacts</a>
@@ -33,9 +33,9 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-
+    <!-- Studio -->
       <section>
-        <h2>2</h2>
+        <h2 id="studio">2</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -67,9 +67,9 @@
           </li>
         </ul>
       </section>
-      <!-- Images -->
+      <!-- Portfolio-->
       <section>
-        <h2>Our Team</h2>
+        <h2 id="portfolio">Our Team</h2>
         <ul>
           <li>
             <img
