--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <nav>
         <ul>
           <li>
-            <a href="studio">Studio</a>
+            <a href="#studio">Studio</a>
           </li>
           <li>
-            <a href="portfolio">Portfolio</a>
+            <a href="#portfolio">Portfolio</a>
           </li>
           <li>
             <a href="">Contacts</a>
@@ -33,7 +33,7 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-    <!-- Studio -->
+      <!-- Studio -->
       <section>
         <h2 id="studio">2</h2>
         <ul>
