--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <header>
-      <!-- Logo -->
-      <a href="index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#studio">Studio</a>
@@ -22,10 +21,12 @@
           </li>
         </ul>
       </nav>
-      <!-- Email -->
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <!-- Tel -->
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- 1-st page -->
@@ -48,7 +49,7 @@
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
-              within the shortest possible time
+              within the shortest possible time.
             </p>
           </li>
           <li>
@@ -62,7 +63,7 @@
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -116,7 +117,7 @@
     </main>
     <footer>
       <!-- Logo -->
-      <a href="index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
