--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <!-- Studio -->
+      <!-- Advantages -->
       <section>
-        <h2 id="studio">2</h2>
+        <h2 id="studio">Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
